testing phase done for user and site