@@ -1,13 +1,14 @@
 package pro.linuxlab.reservation.superadmin.business.site;
 
+import io.micrometer.common.util.StringUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Component;
-import pro.linuxlab.reservation.BaseResponse;
-import pro.linuxlab.reservation.exception.BusinessException;
+import pro.linuxlab.reservation.superadmin.BaseResponse;
+import pro.linuxlab.reservation.superadmin.exception.BusinessException;
 import pro.linuxlab.reservation.superadmin.EnumPool;
 import pro.linuxlab.reservation.superadmin.business.BaseBusiness;
 import pro.linuxlab.reservation.superadmin.dto.mongo.MongoDto;
@@ -19,11 +20,9 @@ import pro.linuxlab.reservation.superadmin.queue.KafkaSender;
 import pro.linuxlab.reservation.superadmin.service.JdbcService;
 import pro.linuxlab.reservation.superadmin.service.MongoService;
 import pro.linuxlab.reservation.superadmin.service.SiteService;
-import pro.linuxlab.reservation.util.Util;
+import pro.linuxlab.reservation.superadmin.util.Util;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static pro.linuxlab.reservation.superadmin.error.AdminErrorCode.Business.*;
 
@@ -49,7 +48,7 @@ public class SiteBusiness extends BaseBusiness implements ISite {
 
     @Override
     public BaseResponse getSite(String siteName, String kcClientId, String kcClientSecret, String databaseUrl, String databaseName, String databaseUser, String databasePassword, String description, String siteUserStatus, int offset, int pageSize, String sortBy, String direction) {
-        Pageable pageable = PageRequest.of(offset, pageSize, Sort.by(sortBy, direction));
+        Pageable pageable = PageRequest.of(offset, pageSize, Sort.by(Sort.Direction.valueOf(direction.toUpperCase(Locale.ROOT)), sortBy));
         try {
             return util.generateDefaultResponse(siteService.getSiteConfigData(siteName, kcClientId, kcClientSecret, databaseUrl, databaseName, databaseUser, databasePassword, description, siteUserStatus,pageable).map(SiteResponse::new));
         } catch (Exception e) {
@@ -60,7 +59,7 @@ public class SiteBusiness extends BaseBusiness implements ISite {
 
     @Override
     public BaseResponse createNewSite(SiteRequest request) {
-        LLSiteConfig siteConfig = checkAndChangeRequest(new SiteRequest(request), "systemId");
+        LLSiteConfig siteConfig = checkAndChangeRequest(request, "systemId");
         String key = generateKeyForMongo(EnumPool.KeyPrefix.SITE);
         mongoService.saveInMongo(key,
                 MongoDto.builder()
@@ -79,7 +78,7 @@ public class SiteBusiness extends BaseBusiness implements ISite {
         mongoService.saveInMongo(key,
                 MongoDto.builder()
                         .mongoDataConfigFunc(EnumPool.MongoDataConfigFunc.UPDATE)
-                        .llSiteConfig(siteConfig)
+                        .llSiteConfig(new LLSiteConfig(systemId))
                         .siteRequest(new SiteRequest(request))
                         .build());
         kafkaSender.sendSiteMessage(key);
@@ -89,15 +88,21 @@ public class SiteBusiness extends BaseBusiness implements ISite {
     @Override
     public BaseResponse changeSiteStatus(String siteId, EnumPool.SiteUserStatus siteUserStatus) {
         LLSiteConfig siteConfig = findSiteById(siteId);
+        if (siteConfig.getStatus().equals(siteUserStatus)) {
+            return util.generateDefaultResponse(null);
+        }
         siteConfig.setStatus(siteUserStatus);
         String key = generateKeyForMongo(EnumPool.KeyPrefix.SITE);
+        SiteRequest request = new SiteRequest();
+        request.setStatus(siteUserStatus.name());
         mongoService.saveInMongo(key,
                 MongoDto.builder()
                         .mongoDataConfigFunc(EnumPool.MongoDataConfigFunc.STATUS)
-                        .llSiteConfig(siteConfig)
+                        .llSiteConfig(new LLSiteConfig(siteId))
+                        .siteRequest(request)
                         .build());
         kafkaSender.sendSiteMessage(key);
-        return null;
+        return util.generateDefaultResponse(null);
     }
 
     private LLSiteConfig findSiteById(String siteId) {
@@ -121,7 +126,8 @@ public class SiteBusiness extends BaseBusiness implements ISite {
                 throw new BusinessException(DUPLICATE_REQUEST);
             }
 //            Keycloak Duplicate
-            List<String> siteList = Arrays.stream(request.getSiteName().split(" ")).toList();
+            List<String> siteList = new ArrayList<>(Arrays.stream(request.getSiteName().split("[^a-zA-Z0-9]")).toList());
+            log.info("site List : [{}]",util.toJson(siteList));
             siteList.add("client");
             String clientId = String.join("-", siteList);
             if (siteService.findLLSiteConfigByKcClientId(clientId).isPresent()) {
@@ -131,6 +137,8 @@ public class SiteBusiness extends BaseBusiness implements ISite {
             changeCreateRequest(llSiteConfig, request);
         } else {
             llSiteConfig = siteConfigOptional.get();
+            log.info("llsiteconfig: {}",llSiteConfig);
+            log.info("request: {}", request);
 //            Duplicate Check
             if (!llSiteConfig.getSiteName().equals(request.getSiteName()) && siteService.findLLSiteConfigBySiteName(request.getSiteName()).isPresent()) {
                 throw new BusinessException(DUPLICATE_REQUEST);
@@ -141,7 +149,18 @@ public class SiteBusiness extends BaseBusiness implements ISite {
     }
 
     private void checkBlankCase(SiteRequest request) {
-        if (request.getSiteName().isBlank() || request.getDatabaseName().isBlank() || request.getDatabaseUrl().isBlank() || request.getDatabaseUser().isBlank() || request.getDatabasePassword().isBlank() || request.getStatus().isBlank()) {
+        if (StringUtils.isBlank(request.getSiteName()) ||
+                StringUtils.isBlank(request.getDatabaseName()) ||
+                StringUtils.isBlank(request.getDatabaseUrl()) ||
+                StringUtils.isBlank(request.getDatabaseUser()) ||
+                StringUtils.isBlank(request.getDatabasePassword()) ||
+                StringUtils.isBlank(request.getStatus())) {
+//            log.info("[{}] [{}] [{}] [{}] [{}] [{}]",request.getSiteName()
+//                    ,request.getDatabaseName()
+//                    ,request.getDatabaseUrl()
+//                    ,request.getDatabaseUser()
+//                    ,request.getDatabasePassword()
+//                    ,request.getStatus());
             throw new BusinessException(INVALID_REQUEST);
         }
     }
